affichage dans la partie html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="container">
 
 
-    kbdf
+    <div class="text-center">
+        <h1>Mes infos</h1>
+        <table class="tab-border col-sm-4 offset-4">
+            <tr class="tab-border">
+                <td class="tab-border">name</td>
+                <td class="tab-border">genre</td>
+            </tr>
+            <tr id="infos">
+
+            </tr>
+        </table>
+
+    </div>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
